--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -48,18 +48,15 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
-      - name: Build and Serve Site
+      - name: Build production website
         env:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
           TZ: America/Los_Angeles
         run: |
-          hugo server \
-            --baseURL "${{ steps.pages.outputs.base_url }}/" \
-            --bind "0.0.0.0" \
-            --appendPort=false \
-            --disableLiveReload=true
+          hugo \
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -76,4 +73,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-      
+     
